// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests CollapsibleCard Component should tests CollapsibleCard when the card is closed 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomColor": "#eeeeee",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "marginRight": 0,
          }
        }
      />
      <Text
        style={{}}
      >
        History
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 0.1,
          "opacity": 1,
          "paddingLeft": 5,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#000000"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`Tests CollapsibleCard Component should tests CollapsibleCard when the card is opened 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomColor": "#eeeeee",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "marginRight": 0,
          }
        }
      />
      <Text
        style={{}}
      >
        History
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 0.1,
          "opacity": 1,
          "paddingLeft": 5,
        }
      }
      testID="collapsible-card"
    >
      <Icon
        color="#000000"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>
  <View>
    ABC
  </View>
</View>
`;
